--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,12 +43,6 @@
   "devDependencies": {
     "webpack": "^5.95.0",
     "webpack-dev-server": "^5.1.0"
-  }
-  {
-    "homepage": "https://VIDYA1980.github.io/quicksell",
-    "scripts": {
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d build"
-    }
-  }
+  },
+  "homepage": "https://VIDYA1980.github.io/quicksell"
 }
