--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
     "webpack": "^5.95.0",
     "webpack-dev-server": "^5.1.0"
   },
-  "homepage": "https://VIDYA1980.github.io/quicksell"
+  "homepage": "https://github.com/VIDYA1980/quicksell"
 }
